--- a/free_shark/templates/admin/admin_layout.html
+++ b/free_shark/templates/admin/admin_layout.html
@@ -12,6 +12,7 @@
                 {% from 'bootstrap/nav.html' import render_nav_item %}
                 {{ render_nav_item('commodity.index','首页') }}
                 {{ render_nav_item('admin.admin_user_view','用户管理') }}
+                {{ render_nav_item('admin.admin_block_view','封禁管理') }}
                 {{ render_nav_item('auth.login','登录') }}
                 {{ render_nav_item('auth.logout','登出') }}
             </div>
