--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -18,7 +18,7 @@
                     {{ render_nav_item('auth.login','登录') }}
                     {{ render_nav_item('auth.logout','登出') }}
                     {{ render_nav_item('commodity.get_my_commodity','商品') }}
-                    {{ render_nav_item('auth.logout','订单') }}
+                    {{ render_nav_item('auth.indexorder','订单') }}
                 </div>
             </div> 
     </nav>
