--- a/free_shark/templates/my_commodity.html
+++ b/free_shark/templates/my_commodity.html
@@ -172,7 +172,7 @@
                                                         <label class="custom-file-label" for="photo1" aria-describedby="photoAddon01">Choose
                                                             file</label>
                                                     </div>
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append"  style="display: none;">
                                                         <span class="input-group-text" id="photoAddon01">Upload</span>
                                                     </div>
                                                 </div>
@@ -182,7 +182,7 @@
                                                         <label class="custom-file-label" for="photo2" aria-describedby="photoAddon02">Choose
                                                             file</label>
                                                     </div>
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append"  style="display: none;">
                                                         <span class="input-group-text" id="photoAddon02">Upload</span>
                                                     </div>
                                                 </div>
@@ -192,7 +192,7 @@
                                                         <label class="custom-file-label" for="photo3" aria-describedby="photoAddon03">Choose
                                                             file</label>
                                                     </div>
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append"  style="display: none;">
                                                         <span class="input-group-text" id="photoAddon03">Upload</span>
                                                     </div>
                                                 </div>
@@ -202,7 +202,7 @@
                                                         <label class="custom-file-label" for="photo4" aria-describedby="photoAddon04">Choose
                                                             file</label>
                                                     </div>
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append"  style="display: none;">
                                                         <span class="input-group-text" id="photoAddon04">Upload</span>
                                                     </div>
                                                 </div>
@@ -212,7 +212,7 @@
                                                         <label class="custom-file-label" for="photo5" aria-describedby="photoAddon05">Choose
                                                             file</label>
                                                     </div>
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append" style="display: none;">
                                                         <span class="input-group-text" id="photoAddon05">Upload</span>
                                                     </div>
                                                 </div>
