修正了移除bootstrap图标后的小bug

--- a/free_shark/templates/admin/block.html
+++ b/free_shark/templates/admin/block.html
@@ -47,7 +47,7 @@
                     <div class="input-group date" id="datetimepicker_start" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_start" placeholder="开始时间" onchange="checkEndTime()" name="start_time" required/>
                         <div class="input-group-append" data-target="#datetimepicker_start" data-toggle="datetimepicker">
-                            <div class="input-group-text"><img src="/static/icons/calendar.svg" title="calendar"></i></div>
+                            <div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     <div class="input-group date" id="datetimepicker_end" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_end" placeholder="结束时间" onchange="checkStartTime()" name="end_time" required/>
                         <div class="input-group-append" data-target="#datetimepicker_end" data-toggle="datetimepicker">
-                            <div class="input-group-text"><img src="/static/icons/calendar.svg" title="calendar"></i></div>
+                            <div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
                         </div>
                     </div>
                 </div>
