--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -26,7 +26,7 @@
                     {% if not current_user.is_anonymous %}
                     {{ render_nav_item('auth.logout','登出') }}
                     {% if current_user.is_admin %}
-                    {{ render_nav_item('admin.admin_user_view','用户管理') }}
+                    {{ render_nav_item('admin.index_view','管理首页') }}
                     {% endif %}
                     {{ render_nav_item('auth.editUser','修改个人信息') }}
                     {% else %}
