增加订单接口（未完）

--- a/free_shark/templates/commodity.html
+++ b/free_shark/templates/commodity.html
@@ -458,5 +458,9 @@
             }
         });
     }
+
+    function add_order(commodity_id){
+        window.location = "/auth/add_order?commodity_id=" + commodity_id;
+    }
 </script>
 {% endblock %}
