对未授权用户的商品界面做了限制

--- a/free_shark/templates/commodity.html
+++ b/free_shark/templates/commodity.html
@@ -12,7 +12,7 @@
 
     <div class="col-10">
         <div class="row">
-            {% if current_user.is_authenticated %}
+            {% if current_user.is_authenticated and not current_user.is_forbid %}
             <div class="col-2">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadCommodity">
                     上架商品
@@ -39,17 +39,17 @@
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="商品名称" aria-label="商品名称"
                                         id="new_commodity_name" name="new_commodity_name"
-                                        aria-describedby="basic-addon1">
+                                        aria-describedby="basic-addon1" required> 
                                 </div>
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="商品种类" aria-label="商品种类" 
                                     id="new_commodity_type" name="new_commodity_type"
-                                    aria-describedby="basic-addon1">
+                                    aria-describedby="basic-addon1" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <input type="number" class="form-control" placeholder="价格" aria-label="价格" 
                                     id="new_commodity_price" name="new_commodity_price"
-                                    aria-describedby="basic-addon1">
+                                    aria-describedby="basic-addon1" required>
                                 </div>
                                 <div class="md-form">
                                     <label for="new_commodity_introduction">介绍</label>
@@ -239,7 +239,7 @@
                             </p>
                             {% endif %}
                         </div>
-                        {% if current_user.is_authenticated %}
+                        {% if current_user.is_authenticated and not current_user.is_forbid %}
                         <div class="col">
                             {% set buy_id = 'buy_btn_' + commodity.id|string %}
                             <button type="button" id={{ buy_id }} class="btn btn-primary" onclick="buy_commodity(this.id)">
