--- a/free_shark/templates/my_commodity.html
+++ b/free_shark/templates/my_commodity.html
@@ -140,15 +140,15 @@
                                                 <input type="hidden" id="commodity_id" name="commodity_id" value={{ commodity.id }} />                                                   
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="商品名称" aria-label="商品名称" id="new_commodity_name"
-                                                        name="new_commodity_name" value={{ commodity.commodity_name }} aria-describedby="basic-addon1">
+                                                        name="new_commodity_name" value={{ commodity.commodity_name }} aria-describedby="basic-addon1" required>
                                                 </div>
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="商品种类" aria-label="商品种类" id="new_commodity_type"
-                                                        name="new_commodity_type" value={{ commodity.commodity_type }} aria-describedby="basic-addon1">
+                                                        name="new_commodity_type" value={{ commodity.commodity_type }} aria-describedby="basic-addon1" required>
                                                 </div>
                                                 <div class="input-group mb-3">
                                                     <input type="number" class="form-control" placeholder="价格" aria-label="价格" id="new_commodity_price"
-                                                        name="new_commodity_price" value={{ commodity.price }} aria-describedby="basic-addon1">
+                                                        name="new_commodity_price" value={{ commodity.price }} aria-describedby="basic-addon1" required>
                                                 </div>
                                                 <div class="md-form">
                                                     <label for="new_commodity_introduction">介绍</label>
