--- a/free_shark/templates/comorder.html
+++ b/free_shark/templates/comorder.html
@@ -131,14 +131,14 @@ function search_status0(){
                             
     }
 function delete_order(id){
-
+    
         if(confirm("您确认要删除这个订单吗?注意：删除操作是不可逆的，请仔细考虑!")==true){
-            window.location = "/auth/update?id=" + id
-                          +"&new_status=" + 1;
+            window.location = "/auth/delete_order?id=" + id;
         }
         else{
 
         }
+        
     }
 
 function update_status_to1(id){
